--- a/lang/langIndex.json
+++ b/lang/langIndex.json
@@ -1,3 +1,3 @@
 {
-    "english": "https://cdn.tfs-network.com/plug/TFS-Bot/lang/en.json"
+    "english": "https://rawgit.com/TFSNetwork/Plug-Bot/master/lang/en.json"
 }
