revert fix for too big error
It didn't work

--- a/lang/en.json
+++ b/lang/en.json
@@ -304,8 +304,8 @@
 "usedskip": "\/me [%%NAME%% used skip]",
 "usernotfound": "\/me User not found.",
 "valid": "\/me @%%NAME%% disconnected %%TIME%% ago and should be at position %%POSITION%%.",
-"validgifrandom": "\/me [@%%NAME%%] http:\/\/media0.giphy.com\/media\/%%ID%%\/200w.gif [Random GIF]",
-"validgiftags": "\/me [@%%NAME%%] http:\/\/media0.giphy.com\/media\/%%ID%%\/200w.gif [Tags: %%TAGS%%]",
+"validgifrandom": "\/me [@%%NAME%%] http://i.giphy.com/%%ID%%.gif [Random GIF]",
+"validgiftags": "\/me [@%%NAME%%] http://i.giphy.com/%%ID%%.gif [Tags: %%TAGS%%]",
 "voteratio": "\/me [@%%NAME%%] @%%USERNAME%% ~ woots: %%WOOT%%, mehs: %%MEHS%%, ratio (w\/m): %%RATIO%%.",
 "voteskip": "voteskip",
 "voteskipexceededlimit": "\/me @%%NAME%%, your song has exceeded the voteskip limit (%%LIMIT%% mehs).",
