--- a/lang/en.json
+++ b/lang/en.json
@@ -168,8 +168,9 @@
 "just amazing",
 "great song",
 "nice play",
-"best song 2016 cunt",
+"best song 2017 cunt",
 "killer"
+"ecstatic dude!!!"
 ],
 "great": [
 "yo m9, this song is gr8"
