--- a/lang/en.json
+++ b/lang/en.json
@@ -169,8 +169,9 @@
 "great song",
 "nice play",
 "best song 2017 cunt",
-"killer"
-"ecstatic dude!!!"
+"killer",
+"ecstatic dude!!!",
+"Wow dj, this gave me a digital boner"
 ],
 "great": [
 "yo m9, this song is gr8"
